<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
 >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/select_entry_type"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    <RadioGroup
        android:id="@+id/sex_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
    <RadioButton
        android:id="@+id/radio1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_idc_base_all" />

    <RadioButton
        android:id="@+id/radio2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_idc_base_single" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_idc_base_mult" />
    </RadioGroup>

</LinearLayout>
    <!--
    进去之后要选择客户信息来填写
     要标准化 不要搞这些魔法值
    -->

