<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <RadioGroup
        android:id="@+id/sex_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_idc_base_all" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_idc_base_single" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_idc_base_mult" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:text="@string/idc_name_str"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000"
            />
        <EditText
            android:id="@+id/idc_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="#000"
            android:hint="@string/idc_name_hint"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:text="@string/idc_location_str"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000"
            />
       <!-- <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="#000"
            android:text="@string/idc_location_select"
            android:id="@+id/idc_location_but"
            />-->

        <TextView
            android:text="@string/idc_name_str"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="#000"
            android:id="@+id/location_city"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#eee"
        ></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:text="@string/idc_location_deep"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000"
            />
        <EditText
            android:id="@+id/idc_location_edit"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="#000"
            android:hint="@string/idc_location_deep_hint"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#eee"
        ></View>


</LinearLayout>
