<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:scrollbars="vertical"
 >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="资产查看菜单"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <Button
        android:id="@+id/query_assit_es"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/idc_query_ups"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#eee"
        ></View>
    <Button
        android:id="@+id/query_assit_air"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/idc_query_air"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#eee"
            ></View>
    <Button
        android:id="@+id/query_assit_emi"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/idc_query_x1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#eee"
            ></View>
    <Button
        android:id="@+id/query_assit_mon_soft"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/idc_query_x6"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#eee"
            ></View>
    <Button
        android:id="@+id/query_assit_mon_interface"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/idc_query_x8"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#eee"
            ></View>
    <Button
        android:id="@+id/query_assit_mon_hard"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/idc_query_x9"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#eee"
            ></View>
    <Button
        android:id="@+id/query_mon_ac"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/idc_query_x3"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#eee"
            ></View>
    <Button
        android:id="@+id/query_assit_mon_video"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/idc_query_x4"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"></Button>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#eee"
            ></View>
    <Button
        android:id="@+id/query_assit_cabient"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/idc_query_x10"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#eee"
            ></View>


   <!--     <Button
            android:id="@+id/hack_angry"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/idc_x11"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />-->
    </LinearLayout>

</ScrollView>
    <!--
    进去之后要选择客户信息来填写
     要标准化 不要搞这些魔法值
    -->

