<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
 >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/help_asset"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        />

    <RadioGroup
        android:id="@+id/sex_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
    <RadioButton
        android:id="@+id/radio1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_asset_create" />

    <RadioButton
        android:id="@+id/radio2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_asset_query" />

    </RadioGroup>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColorHint="@color/hui"
        android:hint="客户ID"
        android:id="@+id/help_asset_id"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        />

</LinearLayout>
    <!--
    进去之后要选择客户信息来填写
     要标准化 不要搞这些魔法值
    -->

