<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000"
            android:text="@string/idc_select_id"
            />
        <TextView
            android:id="@+id/idc_select_id"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="#000"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#eee"
        ></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >
        <TextView

            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000"
            android:text="@string/idc_select_name"
            />
        <TextView
            android:id="@+id/idc_select_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="#000"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#eee"
        ></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000"
            android:text="@string/idc_select_location"
            />
        <TextView
            android:id="@+id/idc_select_location"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="#000"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#eee"
        ></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000"
            android:text="@string/idc_select_type"
            />
        <TextView
            android:id="@+id/idc_select_type"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textSize="16sp"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="#000"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#eee"
        ></View>

</LinearLayout>
